--- a/Keypirinha.ini
+++ b/Keypirinha.ini
@@ -1,4 +1,33 @@
 [app]
 launch_at_startup = yes
-hotkey_run = Alt+Space
+hotkey_run = Ctrl+Alt+K
 show_on_taskbar = no
+
+[gui]
+auto_width = 50
+always_on_top = yes
+hide_on_focus_lost = yes
+#max_height = 10
+
+theme = SolarizedLightColors2
+
+
+[theme/SolarizedLightColors2]
+# A color theme derived from:
+# http://ethanschoonover.com/solarized
+color_background = #d8d8d8
+color_foreground = #586e75
+color_faded = #93a1a1
+color_accent = #268bd2
+color_warn = #cb4b16
+color_title = ${color_foreground}
+color_status = ${color_faded}
+color_textbox_back = #fefefe
+color_listitem_back = ${color_textbox_back}
+color_listitem_title = ${color_foreground}
+color_listitem_desc = ${color_faded}
+color_listitem_tips = ${color_faded}
+color_listitem_selected_back = ${color_background}
+color_listitem_selected_title = ${color_accent}
+color_listitem_selected_desc = ${color_foreground}
+color_listitem_selected_tips = ${color_accent}
